Fix automatic sizing avoiding scrollbars

--- a/data/css/main.css
+++ b/data/css/main.css
@@ -1,5 +1,6 @@
 body {
   width: auto;
+  height: 20px;
 }
 
 div {
